@@ -1,3 +1,15 @@
+2011-02-02  Xiyuan Xia  <xiyuan@chromium.org>
+
+        Reviewed by Tony Chang.
+
+        [Chromium] Select popup with padding has white strip on right
+        https://bugs.webkit.org/show_bug.cgi?id=53602
+
+        No new tests as this change restores old behavior.
+
+        * platform/chromium/PopupMenuChromium.cpp:
+        (WebCore::PopupListBox::layout):
+
 2011-02-02  Beth Dakin  <bdakin@apple.com>
 
         Reviewed by Mark Rowe.
